Minor changes to layout, almost finished the last article...

--- a/about.html
+++ b/about.html
@@ -25,5 +25,10 @@ title: About
     <p>If you're interested in my CV/Resume, you can see it on <a href="http://careers.stackoverflow.com/marcodinacci" title="My CV/Resume">careers.stackoverflow.com</a>.
     I'm not actively looking for a job but I'm always interested to know about new opportunities.</p>
 
+    <p>
+    <a href="https://twitter.com/MarcoDinacci" class="twitter-follow-button" data-show-count="false" data-size="large" data-show-screen-name="false">Follow @MarcoDinacci</a>
+    <a href="https://twitter.com/MarcoDinacci" class="twitter-follow-button" data-show-count="false" data-size="large" data-show-screen-name="false" data-dnt="true">Follow @MarcoDinacci</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </p>
 
 </div>
