Added few more tags and changed the date of the latest OpenJDK post

--- a/_posts/2012-06-30-forking-jdk-for-fun-and-profit.html
+++ b/_posts/2012-06-30-forking-jdk-for-fun-and-profit.html
@@ -5,7 +5,9 @@ tags:
 - Java
 - OSX
 - OpenJDK
-- appbundler
+- AppBundler
+- BitBucket
+- Open Source
 ---
 
 <p>At <a href="http://infinitekind.com">my current job</a> I'm tasked with bringing a Java Swing application to the App Store.</p>
