Some more changes to the java to app store post

--- a/_posts/2012-06-30-take-java-to-app-store.html
+++ b/_posts/2012-06-30-take-java-to-app-store.html
@@ -419,11 +419,14 @@ productbuild --component YourApp.app /Applications --sign SIGNING_ID_INSTALLER Y
     <p>If a user double click on a file to open your application the application will crash before even showing its main window.
 
 <h4><em>awt.brush.metalLook</em> is not observed.</h4>
-    <p class="success">This has been fixed, see <a href="http://cr.openjdk.java.net/~serb/7124513/webrev.01/">webrev</a>.</p>
+    <p class="success"><b>Update: </b>this has been fixed, see <a href="http://cr.openjdk.java.net/~serb/7124513/webrev.01/">webrev</a>.</p>
     <p><del><a href="http://mail.openjdk.java.net/pipermail/macosx-port-dev/2012-May/004227.html">Planned to be fixed in jdk7u6</a></del>.</p>
 
 <h4>Sandbox Violation on Runtime Exec</h4>
     <p><a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=7175692">Bug description</a> and <a href="http://mail.openjdk.java.net/pipermail/macosx-port-dev/2012-June/004375.html">ML discussion</a>. Because of the sandbox an application can't create a child process; there are a few workarounds but they all involve writing native code. The real solution is to use <em>posix_spawn</em>.</p>
+
+<h4>CA certificates not included in OpenJDK</h4>
+    <p>If your application uses SSL, you may want to look at <a href="http://mail.openjdk.java.net/pipermail/macosx-port-dev/2012-March/003479.html">this discussion (workaround included)</a>.</p>
 
 <h4>Private API usage</h4>
     <p>Our first app submission failed because some awt files use some functions defined in some Apple private frameworks. I replaced the functions I've found with public API and added a patch to the bug report.</p>
